Updated on 11 Dec 2021 RJ

--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -37,6 +39,181 @@
                         alt="">
                     <button class="btn">Explore Now &#8594;</button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Categories -->
+    <div class="categories">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="https://m.media-amazon.com/images/I/71vZypjNkPS._SL1500_.jpg" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="https://m.media-amazon.com/images/I/41sGASjc4-L.jpg" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="https://m.media-amazon.com/images/I/61dHtJrlcOL._AC_SX522_.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Products  -->
+    <div class="small-container">
+        <h2 class="title">Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="https://i01.appmifile.com/webfile/globalimg/in/cms/BA2627B1-1735-7AE7-B5B3-304C3E73A99B.jpg"
+                    alt="">
+                <h4>Redmi Note 9 Pro</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;16,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://images-eu.ssl-images-amazon.com/images/I/71f-TfffHfL._AC_UL200_SR200,200_.jpg"
+                    alt="">
+                <h4>Redmi Smart TV</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;30,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/71Qy5NSsbnL._AC_SY450_.jpg"
+                    alt="" >
+                <h4>LG gram i7</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;50,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://images-eu.ssl-images-amazon.com/images/I/61IMRs+o0iL._AC._SR360,460.jpg"
+                    alt="">
+                <h4>Boat Extends</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;3,000</p>
+            </div>
+        </div>
+
+        <!-- Latest  -->
+        <h2 class="title">Latest Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/71sesDsw95L._AC_SX355_.jpg"
+                    alt="">
+                <h4>Acer Aspire</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;40,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/71AqQyCMmeL._SL1240_.jpg"
+                    alt="">
+                <h4>Amazon Basics</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;25,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/41Gsj-Q-zOS.jpg"
+                    alt="" >
+                <h4>OnePlus 3T</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;35,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/71AD5iVm62L._SY355_.jpg"
+                    alt="">
+                <h4>Boult Audio</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;15,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/61FxsUbnavL._SL1500_.jpg"
+                    alt="">
+                <h4>OnePlus Midnight</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;22,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://i.gadgets360cdn.com/products/smart-home/large/1551964771_832_amazon_echo-smart-speaker.jpg"
+                    alt="">
+                <h4>Amazon Echo</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;5,000</p>
+            </div>
+            <div class="col-4">
+                <img src="https://m.media-amazon.com/images/I/61Y+8BuBwwL._SY355_.jpg"
+                    alt="">
+                <h4>Earpods</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>&#8377;8,000</p>
             </div>
         </div>
     </div>
