Updated on 19 Dec 2021 By RJ

--- a/home.html
+++ b/home.html
@@ -217,7 +217,94 @@
             </div>
         </div>
     </div>
+<!-- offer -->
+<div class="offer">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-5">
+                <img src="https://m.media-amazon.com/images/I/71X8NdnCsvL._SL1500_.jpg" class="offer-img">
+            </div>
+            <div class="col-5" style="margin-right: 150px;">
+                <p>Exclusivly Available</p>
+                <h1>Smart Band 4</h1>
+                <small >The Mi Smart Band 4 features a 40% larger AMOLED color full-touch display with adjustable brightness, so everything is clear as can be.</small><br><br>
+                <a href="" class="btn1">Buy Now &#8594;</a>
+            </div>
+        </div>
+    </div>
+</div>
 
+<!-- testimonials -->
+<div class="testimonial">
+    <div class="small-container">
+        <div class="row1">
+            <div class="col-6">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa est ab officia debitis error mollitia quas dolorum, esse laborum.</p>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <img src="https://cdn.mos.cms.futurecdn.net/THCiUmVZcgxHodGCK3EyYo.jpg" alt="">
+                <h3>Person 1</h3>
+            </div>
+
+            <div class="col-6">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa est ab officia debitis error mollitia quas dolorum, esse laborum.</p>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <img src="https://cdn.mos.cms.futurecdn.net/THCiUmVZcgxHodGCK3EyYo.jpg" alt="">
+                <h3>Person 1</h3>
+            </div>
+
+            <div class="col-6">
+                <i class="fa fa-quote-left"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa est ab officia debitis error mollitia quas dolorum, esse laborum.</p>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <img src="https://cdn.mos.cms.futurecdn.net/THCiUmVZcgxHodGCK3EyYo.jpg" alt="">
+                <h3>Person 1</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- brands -->
+<div class="brands">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-7">
+                <img src="https://www.freepnglogos.com/uploads/xiaomi-png/xiaomi-logo-png-transparent-xiaomi-logo-images-mi-logo-2.png" width="200" alt="xiaomi logo png transparent xiaomi logo images mi logo" />
+            </div>
+            <div class="col-7">
+                <img src="https://www.freepnglogos.com/uploads/oppo-logo-png/oppo-logo-hd-picture-7.png" width="200" alt="oppo logo hd picture" />
+            </div>
+            <div class="col-7">
+                <img src="https://www.freepnglogos.com/uploads/mac-cosmetic-png-logo/infinite-island-apple-emblem-mac-cosmetic-png-logo-10.png" width="200" alt="infinite island apple emblem, mac cosmetic png logo" />
+            </div>
+            <div class="col-7">
+                <img src="https://www.freepnglogos.com/uploads/dell-png-logo/dell-png-logo-0.png" width="200" alt="dell png logo" />
+            </div>
+            <div class="col-7">
+                <img src="https://www.freepnglogos.com/uploads/logo-asus-png/asus-world-motherboard-gaming-brand-2.png" width="200" alt="asus world motherboard gaming brand" />
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
